--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
     <div class="content">
 
-        <form id="add-cafe-form"></form>
+        <form id="add-cafe-form">
+        <input type="text" name="name" placeholder="Name"/>
+        <input type="text" name="city" placeholder="City"/>
+        <button>Add Cafe</button>
+        </form>
 
         <ul id="cafe-list"></ul>
 
